really just fucked up

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
-upload_port=/dev/cu.usbmodem1101
+; upload_port=/dev/cu.usbmodem1101
+lib_deps =
+    git@github.com:eloquentarduino/EloquentEsp32cam.git
