--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,7 @@ platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
-upload_port=/dev/cu.usbmodem1101
+; upload_port=/dev/cu.usbmodem1101
+build_flags = 
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1    
